MDEV-9428 NO_AUTO_VALUE_ON_ZERO is ignored when a trigger before insert is defined

Don't compare "field == table->next_number_field" because the field
can be special nullable field copy created by the trigger.
Compare field_index values instead.